--- a/SocialApp/Resources/layout/activity_main.axml
+++ b/SocialApp/Resources/layout/activity_main.axml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
 	android:background="@drawable/bckgrnd"
     android:layout_height="match_parent">
@@ -33,10 +31,13 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="45.0dp"
 		android:id="@+id/linearLayout1" >
-		<ListView android:id="@android:id/list"
+		<ListView
+			android:minWidth="25px"
+			android:minHeight="25px"
 			android:layout_width="fill_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="0"
-			android:layout_marginLeft="12.5dp"/>
+			android:layout_marginLeft="12.5dp"
+			android:id="@+id/listView1" />
 	</LinearLayout>
-</RelativeLayout>
+</LinearLayout>
